preserve java 11 compatibility